--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
     "@types/node": "^16.18.115",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
+    "apexcharts": "^3.54.1",
     "gh-pages": "^6.2.0",
     "react": "^18.3.1",
+    "react-apexcharts": "^1.5.0",
     "react-dom": "^18.3.1",
+    "react-helmet": "^6.1.0",
     "react-query": "^3.39.3",
     "react-router-dom": "^5.3.4",
     "react-scripts": "5.0.1",
@@ -48,6 +51,7 @@
   },
   "devDependencies": {
     "@tanstack/react-query-devtools": "^5.59.16",
+    "@types/react-helmet": "^6.1.11",
     "@types/react-router-dom": "^5.3.3",
     "@types/styled-components": "^5.1.34"
   },
